--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,20 +1,22 @@
 {
+  "build_entry_point": "docs",
   "need_generate_pdf": false,
   "need_generate_intellisense": false,
   "docsets_to_publish": [
     {
       "docset_name": "VBAContent",
-      "build_source_folder": "VBA",
+      "build_source_folder": "VBAContent",
       "build_output_subfolder": "VBA",
       "locale": "en-us",
       "version": 0,
-      "open_to_public_contributors": false,
+      "open_to_public_contributors": true,
       "type_mapping": {
         "Conceptual": "Content",
         "ManagedReference": "Content",
         "RestApi": "Content"
       },
-      "build_entry_point": "op"
+      "build_entry_point": "docs",
+      "template_folder": "_themes.MSDN.Modern"
     }
   ],
   "notification_subscribers": [
@@ -25,5 +27,13 @@
   "branches_to_filter": [
     "live"
   ],
-  "skip_source_output_uploading": false
+  "skip_source_output_uploading": false,
+  "dependent_repositories": [
+    {
+      "path_to_root": "_themes.MSDN.Modern",
+      "url": "https://github.com/Microsoft/templates.msdn.msft",
+      "branch": "master",
+      "branch_mapping": {}
+    }
+  ]
 }
